2006-06-27 Tim
 PATCH: [ 1512744 ] Developer-page download links don't work
  Web: page.inc
  Web\developer: wincvs.php

2006-06-13 Tim
 PATCH: [ 1505671 ] Website changes for new stable release 2.4.8
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.4: changes.txt index.php

2006-05-23 Tim
 PATCH: [ 1493059 ] Update czech translator and translation status
  Web\developer\l10n: status.php status.xml

2006-05-22 Tim
 PATCH: [ 1493090 ] Clarify we won't accept changed .lang files as translations
  Web\developer\l10n: instructions.php

2006-05-20 Tim
 RFE: [ 1224436 ] WinMerge as an Eclipse IDE plugin?
  Web: links.php

2006-03-24 Tim
 PATCH: [ 1457946 ] Add known issue about 64bit windows and shell extension
  Web\2.4: limitations.php

2006-03-15 Tim
 PATCH: [ 1449943 ] Web: Use new logo
  Web: page.inc
  Web\css: print.css
  Web\images: new file logo.gif

2006-03-01 Tim
 PATCH: [ 1441282 ] Website changes for new stable release 2.4.6
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.4: changes.txt index.php

2006-02-28 Tim
 PATCH: [ 1440383 ] Suggested addition to manual about bug reports
  Web: index.php
  Web\2.4: index.php

2006-02-21 Tim
 BUG: [ 1435491 ] Developer instructions needs to be updated
  Web\developer: needed.php

2006-02-06 Tim
 PATCH: [ 1424249 ] Add note about double-byte accelerators to l10n developer.ph
  Web\developer\l10n: instructions.php

2006-02-01 Perry
 PATCH: [ 1412386 ] Adding readme files
  Renamed readme.txt (this file) to Changes.txt
  New readme.txt file

2006-01-31 Tim
 PATCH: [ 1418972 ] Web: Add version '2.5' to translation status
  Web\developer\l10n: status.php status.xml

2006-01-23 Tim
 BUG: [ 1412395 ] Misspelling in l10n docs
  Web\developer\l10n: instructions.php

2006-01-13 Tim
 PATCH: [ 1404317 ] Web: Known Limitations page
  Web: page.inc
  Web\2.4: new file limitations.php
  Web\2.4\images: new file statusbar.gif

2006-01-11 Tim