@@ -26,6 +26,12 @@
     <email>dlkj at users.sourceforge.net</email>
   </developer>
   <developer>
+    <name>Gal Hammer</name>
+    <username>galh</username>
+    <role>2</role>
+    <email>galh at users.sourceforge.net</email>
+  </developer>
+  <developer>
     <name>Tim Gerundt</name>
     <username>gerundt</username>
     <role>4</role>
